test/resources/valid/com/boothj5/jarchexample/configuration/controller/ConfigurationController.java
package com.boothj5.jarchexample.configuration.controller;

import java.util.List;

import com.boothj5.jarchexample.common.*;
import com.boothj5.jarchexample.configuration.facade.ConfigurationFacade;