test/resources/invalid/com/boothj5/jarchexample/configuration/controller/ConfigurationController.java
package com.boothj5.jarchexample.configuration.controller;

import java.util.List;

import com.boothj5.jarchexample.common.*;
import com.boothj5.jarchexample.configuration.facade.ConfigurationFacade;
import com.boothj5.jarchexample.configuration.service.ConfigurationService;
import com.boothj5.jarchexample.configuration.repository.ConfigurationRepository;
import com.boothj5.jarchexample.configuration.dao.ConfigurationDAO;
